# obsidian-search-app

./: .gitignore  README.md  pyproject.toml  run_app.py
src/obsidian_search_app/: __init__.py  app.py  cli.py  indexer.py  searcher.py
